# BubbleTask

./: .gitignore  BubbleTask.py  Pipfile  README.md  build_config.json  config.json  generate_readme.py  pyproject.toml  requirements.txt  setup.py  todo.md
BubbleTask/: __main__.py
BubbleTask.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
BubbleTask/BubbleTask/: BubbleApp.py  BubbleLib.py  BubbleRenderer.py  DatePicker.py  ProjectTab.py  ProjectsTab.py  Spinbox.py  TasksFrame.py  ViewerTab.py  __init__.py
Profiles/: 1667487556915575300_meta.json
Projects/: 1667508414883349000_meta.json  1667508459895517300_meta.json  1667508722918126100_meta.json
